--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,5 @@ sysinfo.txt
 crashlytics-build.properties
 
 /ProjectSettings/Packages/com.unity.probuilder/Settings.json
+/ProjectSettings/Packages/com.unity.connect.share/Settings.json
+/ProjectSettings/Packages/com.unity.learn.iet-framework/Settings.json
