--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,5 @@ crashlytics-build.properties
 /ProjectSettings/Packages/com.unity.probuilder/Settings.json
 /ProjectSettings/Packages/com.unity.connect.share/Settings.json
 /ProjectSettings/Packages/com.unity.learn.iet-framework/Settings.json
+
+PhaseShift.zip
