--- a/.gitignore
+++ b/.gitignore
@@ -58,6 +58,7 @@ sysinfo.txt
 # Crashlytics generated file
 crashlytics-build.properties
 
+/UserSettings/EditorUserSettings.asset
 /ProjectSettings/Packages/com.unity.probuilder/Settings.json
 /ProjectSettings/Packages/com.unity.connect.share/Settings.json
 /ProjectSettings/Packages/com.unity.learn.iet-framework/Settings.json
