--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,4 @@ crashlytics-build.properties
 /ProjectSettings/Packages/com.unity.learn.iet-framework/Settings.json
 
 PhaseShift.zip
+UserSettings/EditorUserSettings.asset
