--- a/.gitignore
+++ b/.gitignore
@@ -65,3 +65,7 @@ crashlytics-build.properties
 
 PhaseShift.zip
 UserSettings/EditorUserSettings.asset
+
+PhaseShift-release.zip
+
+PhaseShift_old.zip
